src/main/java/com/example/tareaspring/errors/DatabaseSaveException.java
package com.example.tareaspring.errors;

public class DatabaseSaveException extends RuntimeException {

    public DatabaseSaveException(String message) {
        super(message);
    }
}
